--- a/core/Makefile
+++ b/core/Makefile
@@ -407,6 +407,7 @@ endif
 	        TARGET_BUILD_FLAVOR="$(TARGET_BUILD_FLAVOR)" \
 	        TARGET_DEVICE="$(TARGET_DEVICE)" \
 	        AOSIP_DEVICE="$(TARGET_DEVICE)" \
+			NITROGEN_VERSION="nitrogen_$(TARGET_DEVICE)-$(TARGET_BUILD_VARIANT)-UNOFFICIAL_poad42-$(BUILD_DATE)" \
 	        PRODUCT_NAME="$(TARGET_PRODUCT)" \
 	        PRODUCT_BRAND="$(PRODUCT_BRAND)" \
 	        PRODUCT_DEFAULT_LOCALE="$(call get-default-product-locale,$(PRODUCT_LOCALES))" \
